--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1">
+    <link rel="stylesheet" href="assets/css/style.css?v1.1">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     
 </head>
 <body>
-
-    <img src="assets/img/bunga-bawah.png" class="bunga-bawah" alt="">
-    
+   
     <nav class="nav">
         <a href="#" class="nav__link nav__link--active">
             <i class="material-icons nav__icon">dashboard</i>
@@ -41,11 +39,12 @@
     </nav>
 
     <div class="container">
+        <img src="assets/img/home-nama-kartu-background.png" class="img-home-nama-kartu-background" alt="">
         <div class="kartu-nama">
             <div class="nama">
-                <h4>Carina Laila Shifa</h4>
-                <h4>&</h4>
-                <h4>Andy Arismianto</h4>
+                <h5>Carina Laila Shifa</h5>
+                <h5>&</h5>
+                <h5>Andy Arismianto</h5>
             </div>
         </div>
     </div>
