--- a/index.html
+++ b/index.html
@@ -11,30 +11,32 @@
     <link rel="stylesheet" href="assets/css/style.css?v1.2">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    
+    <audio id="backsound" autoplay loop>
+        <source src="assets/audio/TULUS-Adaptasi.mp3" type="audio/mp3">
+    </audio>
 </head>
 <body>
    
     <nav class="nav">
-        <a href="#" class="nav__link nav__link--active">
+        <a href="index.html" class="nav__link nav__link--active">
             <i class="material-icons nav__icon">dashboard</i>
             <span class="nav__text">Home</span>
         </a>
-        <a href="#" class="nav__link">
+        <a href="mempelai.html" class="nav__link">
             <i class="material-icons nav__icon">supervised_user_circle</i>
             <span class="nav__text">Mempelai</span>
         </a>
-        <a href="#" class="nav__link">
+        <a href="acara.html" class="nav__link">
             <i class="material-icons nav__icon">event_note</i>
             <span class="nav__text">Acara</span>
         </a>
-        <a href="#" class="nav__link">
+        <a href="tempat.html" class="nav__link">
             <i class="material-icons nav__icon">location_on</i>
             <span class="nav__text">Tempat</span>
         </a>
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon">settings</i>
-            <span class="nav__text">Song</span>
+        <a href="#" class="nav__link sound">
+            <i class="material-icons nav__icon" id="icon_music">music_note</i>
+            <span class="nav__text">Musik</span>
         </a>
     </nav>
 
@@ -52,6 +54,26 @@
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+
+    <script type="text/javascript">
+        var myAudio = document.getElementById("backsound");
+        var isPlaying = false;
+
+        $(".sound").on("click", function () {
+            isPlaying ? myAudio.pause() : myAudio.play();
+        })
+
+        myAudio.onplaying = function () {
+            isPlaying = true;
+            document.getElementById("icon_music").innerHTML = "music_note";
+        };
+
+        myAudio.onpause = function () {
+            isPlaying = false;
+            document.getElementById("icon_music").innerHTML= "music_off";
+        };
+    </script>
 </body>
 </html>
