--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    
     <nav class="nav">
         <a href="index.html" class="nav__link nav__link--active">
-            <i class="material-icons nav__icon">dashboard</i>
+            <i class="material-icons nav__icon">email</i>
             <span class="nav__text">Home</span>
         </a>
         <a href="mempelai.html" class="nav__link">
