--- a/mempelai.html
+++ b/mempelai.html
@@ -49,25 +49,24 @@
                 <div class="text-atas">
                     <h2 class="bismillah">Bismillahirrahmanirrahim</h2>
                     <h6>Assalamualaikum Warahmatullahi Wabarakatuh</h6>
-                    <!-- <h6>Maha Suci Allah yang telah menciptakan manusia dengan berpasang-pasangan</h6> -->
                     <h6>Dengan memohon rahmat serta ridho Allah SWT kami bermaksud menyelenggarakan acara pernikahan putra - putri kami :</h6>
                 </div>
                 <div class="row data-mempelai d-flex justify-content-center">
-                    <div class="col-md-4 col-lg-12">
+                    <div class="col-lg-4 col-md-12">
                         <div class="text-center ket-mempelai">
                             <img src="assets/img/mempelai/andy.png" class="img-fluid rounded-circle img-mempelai" alt="">
                             <h5 class="mt-3">Andy Arismianto</h5>
                             <h6>Putra ke-dua Bapak Muhamad Diky & Ibu Imas Masitoh</h6>
                         </div>
                     </div>
-                    <div class="col-md-2 col-lg-12 d-flex align-items-center text-col-dengan">
+                    <div class="col-lg-2 col-md-12 d-flex align-items-center text-col-dengan">
                         <h1 class="text-dengan">Dengan</h1>
                     </div>
-                    <div class="col-md-4 col-lg-12">
+                    <div class="col-lg-4 col-md-12">
                         <div class="text-center ket-mempelai">
                             <img src="assets/img/mempelai/andy.png" class="img-fluid rounded-circle img-mempelai" alt="">
                             <h5 class="mt-3">Carina Laila Shifa</h5>
-                            <h6>Putri ke-lima Bapak Asep Rusaman & Ibu Nuriah S</h6>
+                            <h6>Putri ke-lima Bapak Asep Rusaman & Ibu Nuriah</h6>
                         </div>
                     </div>
                 </div>
