--- a/acara.html
+++ b/acara.html
@@ -9,7 +9,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1.2">
+    <link rel="stylesheet" href="assets/css/style.css?v1.4">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -43,7 +43,38 @@
         </nav>
 
         <div class="container">
-            Hai
+            <img src="assets/img/kanan.png" class="img-kanan" alt="">
+            <img src="assets/img/kiri.png" class="img-kiri" alt="">
+
+            <div class="text-judul-acara">
+                <h1>Rangkaian Acara</h1>
+            </div>
+            <div class="container-acara">
+                <div class="row">
+                    <div class="col-md-12 col-lg-6">
+                        <div class="card-acara">
+                            <h4 class="judul-card-acara">Akad Nikah</h4>
+                            <hr>
+                            <h5>Tempat : Jln. Aria Cikondang Gg.Harapan 1 No. 34A</h5>
+                            <h5>Hari/tgl : Jumat / 12 Maret 2021</h5>
+                            <h5>Waktu : 13.30-selesai</h5>
+                            <hr>
+                            <h5 id="cd-akad">Loading...</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6 akad">
+                        <div class="card-acara">
+                            <h4 class="judul-card-acara">Resepsi Pernikahan</h4>
+                            <hr>
+                            <h5>Tempat : Green Hill Resort Jl. Raya Ciherang Kp. Panyawouyan, Ciherang, Kec. Pacet, Kabupaten Cianjur, Jawa Barat 43253</h5>
+                            <h5>Hari/tgl : Sabtu / 13 Maret 2021</h5>
+                            <h5>Waktu : 09.00-Selesai</h5>
+                            <hr>
+                            <h5 id="cd-resepsi">Loading...</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="assets/js/bootstrap.js"></script>
@@ -69,6 +100,46 @@
                 isPlaying = false;
                 document.getElementById("icon_music").innerHTML = "music_off";
             };
+
+            // Set the date we're counting down to
+            var jadwal_akad = new Date("March 12, 2021 09:00:00").getTime();
+            var jadwal_resepsi = new Date("March 13, 2021 13:30:00").getTime();
+
+            // Update the count down every 1 second
+            var x = setInterval(function() {
+
+                // Get today's date and time
+                var now = new Date().getTime();
+
+                // Find the distance between now and the count down date
+                var distance_akad = jadwal_akad - now;
+                var distance_resepsi = jadwal_resepsi - now;
+
+                // Time calculations for days, hours, minutes and seconds
+                var days_akad = Math.floor(distance_akad / (1000 * 60 * 60 * 24));
+                var hours_akad = Math.floor((distance_akad % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes_akad = Math.floor((distance_akad % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds_akad = Math.floor((distance_akad % (1000 * 60)) / 1000);
+
+                var days_resepsi = Math.floor(distance_resepsi / (1000 * 60 * 60 * 24));
+                var hours_resepsi = Math.floor((distance_resepsi % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes_resepsi = Math.floor((distance_resepsi % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds_resepsi = Math.floor((distance_resepsi % (1000 * 60)) / 1000);
+
+                // Display the result in the element with id="demo"
+                document.getElementById("cd-akad").innerHTML = days_akad + "d " + hours_akad + "h " + minutes_akad + "m " + seconds_akad + "s left";
+                document.getElementById("cd-resepsi").innerHTML = days_resepsi + "d " + hours_resepsi + "h " + minutes_resepsi + "m " + seconds_resepsi + "s left";
+
+                // If the count down is finished, write some text
+                if (distance_akad < 0) {
+                    clearInterval(x);
+                    document.getElementById("cd-akad").innerHTML = "Acara Sudah Selesai";
+                }
+                if (distance_resepsi < 0) {
+                    clearInterval(x);
+                    document.getElementById("cd-resepsi").innerHTML = "Acara Sudah Selesai";
+                }
+            }, 1000);
         </script>
     </body>
 
