--- a/tempat.html
+++ b/tempat.html
@@ -9,7 +9,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1.2">
+    <link rel="stylesheet" href="assets/css/style.css?v1.4">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -43,7 +43,23 @@
         </nav>
 
         <div class="container">
-            Hai
+            <img src="assets/img/kanan.png" class="img-kanan" alt="">
+            <img src="assets/img/kiri.png" class="img-kiri" alt="">
+
+            <div class="container-tempat">
+                <div class="judul mt-2">
+                    <div class="row">
+                        <div class="col-6 d-flex align-items-center">
+                            <h3 class="ml-3" style="text-align: left;">Lokasi</h3>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end">
+                            <a href="https://goo.gl/maps/5o7njYGwmuW5Y8ZQA" class="btn btn-primary btn-rounded mr-3" >Open google</a>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div id="map"></div>
+            </div>
         </div>
 
         <script src="assets/js/bootstrap.js"></script>
@@ -51,7 +67,7 @@
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxsJkeeQQxJJfDpijeQLhtnVLhvQGNcsI&callback=initMap&libraries=&v=weekly" async></script>
         <script type="text/javascript">
             var myAudio = document.getElementById("backsound");
             var isPlaying = false;
@@ -69,6 +85,23 @@
                 isPlaying = false;
                 document.getElementById("icon_music").innerHTML = "music_off";
             };
+
+            // Initialize and add the map
+                function initMap() {
+                    // The location of Uluru
+                    const uluru = { lat: -6.7619207979877185, lng: 107.05500035262334 };
+                    
+                    // The map, centered at Uluru
+                    const map = new google.maps.Map(document.getElementById("map"), {
+                        zoom: 16,
+                        center: uluru,
+                    });
+                    // The marker, positioned at Uluru
+                    const marker = new google.maps.Marker({
+                        position: uluru,
+                        map: map,
+                    });
+                }
         </script>
     </body>
 
