--- a/acara.html
+++ b/acara.html
@@ -9,7 +9,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1.4">
+    <link rel="stylesheet" href="assets/css/style.css?v2.0">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -55,9 +55,23 @@
                         <div class="card-acara">
                             <h4 class="judul-card-acara">Akad Nikah</h4>
                             <hr>
-                            <h5>Tempat : Jln. Aria Cikondang Gg.Harapan 1 No. 34A</h5>
-                            <h5>Hari/tgl : Jumat / 12 Maret 2021</h5>
-                            <h5>Waktu : 13.30-selesai</h5>
+                            <table class="acara-detail" style="width: 100%;">
+                                <tr>
+                                    <td>Tempat</td>
+                                    <td>:</td>
+                                    <td>Jln. Aria Cikondang Gg.Harapan 1 No. 34A</td>
+                                </tr>
+                                <tr>
+                                    <td>Hari/tgl</td>
+                                    <td>:</td>
+                                    <td>Jumat / 12 Maret 2021</td>
+                                </tr>
+                                <tr>
+                                    <td>Waktu</td>
+                                    <td>:</td>
+                                    <td>13.30-selesai</td>
+                                </tr>
+                            </table>
                             <hr>
                             <h5 id="cd-akad">Loading...</h5>
                         </div>
@@ -66,15 +80,183 @@
                         <div class="card-acara">
                             <h4 class="judul-card-acara">Resepsi Pernikahan</h4>
                             <hr>
-                            <h5>Tempat : Green Hill Resort Jl. Raya Ciherang Kp. Panyawouyan, Ciherang, Kec. Pacet, Kabupaten Cianjur, Jawa Barat 43253</h5>
-                            <h5>Hari/tgl : Sabtu / 13 Maret 2021</h5>
-                            <h5>Waktu : 09.00-Selesai</h5>
+                            <table class="acara-detail" style="width: 100%;">
+                                <tr>
+                                    <td style="width: 12%;">Tempat</td>
+                                    <td>:</td>
+                                    <td>Green Hill Resort Jl. Raya Ciherang Kp. Panyawouyan, Ciherang, Kec. Pacet, Kabupaten Cianjur, Jawa Barat 43253</td>
+                                </tr>
+                                <tr>
+                                    <td>Hari/tgl</td>
+                                    <td>:</td>
+                                    <td>Sabtu / 13 Maret 2021</td>
+                                </tr>
+                                <tr>
+                                    <td>Waktu</td>
+                                    <td>:</td>
+                                    <td>09.00-Selesai</td>
+                                </tr>
+                            </table>
                             <hr>
                             <h5 id="cd-resepsi">Loading...</h5>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- salju -->
+        <div class='snow-flakes'>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
         </div>
 
         <script src="assets/js/bootstrap.js"></script>
