--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1.2">
+    <link rel="stylesheet" href="assets/css/style.css?v2.0">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -16,7 +16,7 @@
     </audio>
 </head>
 <body>
-   
+
     <nav class="nav">
         <a href="index.html" class="nav__link nav__link--active">
             <i class="material-icons nav__icon">email</i>
@@ -43,12 +43,167 @@
     <div class="container">
         <img src="assets/img/home-nama-kartu-background.png" class="img-home-nama-kartu-background" alt="">
         <div class="kartu-nama">
-            <div class="nama">
+            <div class="nama px-0">
+                <h4>you're invited to our wedding</h4>
                 <h5>Carina Laila Shifa</h5>
                 <h5>&</h5>
                 <h5>Andy Arismianto</h5>
             </div>
         </div>
+    </div>
+
+    <!-- salju -->
+    <div class='snow-flakes'>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
+        <div class='flake'></div>
     </div>
     
     <script src="assets/js/bootstrap.js"></script>
