--- a/mempelai.html
+++ b/mempelai.html
@@ -9,7 +9,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1.3">
+    <link rel="stylesheet" href="assets/css/style.css?v2.0">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -54,9 +54,9 @@
                 <div class="row data-mempelai d-flex justify-content-center">
                     <div class="col-lg-4 col-md-12">
                         <div class="text-center ket-mempelai">
-                            <img src="assets/img/mempelai/andy.png" class="img-fluid rounded-circle img-mempelai" alt="">
+                            <img src="assets/img/mempelai/andy-baru-kotak.png" class="img-fluid rounded-circle img-mempelai" alt="">
                             <h5 class="mt-3">Andy Arismianto</h5>
-                            <h6>Putra ke-dua Bapak Muhamad Diky & Ibu Imas Masitoh</h6>
+                            <h6>Putra ke-dua dari Bapak Muhamad Diky & Ibu Imas Masitoh</h6>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-12 d-flex align-items-center text-col-dengan">
@@ -64,13 +64,167 @@
                     </div>
                     <div class="col-lg-4 col-md-12">
                         <div class="text-center ket-mempelai">
-                            <img src="assets/img/mempelai/andy.png" class="img-fluid rounded-circle img-mempelai" alt="">
+                            <img src="assets/img/mempelai/carina-baru-kotak.png" class="img-fluid rounded-circle img-mempelai" alt="">
                             <h5 class="mt-3">Carina Laila Shifa</h5>
-                            <h6>Putri ke-lima Bapak Asep Rusaman & Ibu Nuriah</h6>
+                            <h6>Putri ke-lima dari Bapak Asep Rusmana & Ibu Nuriah S</h6>
                         </div>
                     </div>
                 </div>
             </div>  
+        </div>
+
+        <!-- salju -->
+        <div class='snow-flakes'>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
         </div>
 
         <script src="assets/js/bootstrap.js"></script>
