--- a/tempat.html
+++ b/tempat.html
@@ -9,7 +9,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v1.4">
+    <link rel="stylesheet" href="assets/css/style.css?v2.0">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -50,16 +50,170 @@
                 <div class="judul mt-2">
                     <div class="row">
                         <div class="col-6 d-flex align-items-center">
-                            <h3 class="ml-3" style="text-align: left;">Lokasi</h3>
+                            <h3 class="ml-3 tempat-judul" style="text-align: left;">Lokasi</h3>
                         </div>
                         <div class="col-6 d-flex justify-content-end">
-                            <a href="https://goo.gl/maps/5o7njYGwmuW5Y8ZQA" class="btn btn-primary btn-rounded mr-3" >Open google</a>
+                            <a href="https://goo.gl/maps/5o7njYGwmuW5Y8ZQA" target="_blank" class="btn btn-primary btn-rounded mr-3" >Open google</a>
                         </div>
                     </div>
                 </div>
                 <hr>
                 <div id="map"></div>
             </div>
+        </div>
+
+        <!-- salju -->
+        <div class='snow-flakes'>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
+            <div class='flake'></div>
         </div>
 
         <script src="assets/js/bootstrap.js"></script>
