--- a/acara.html
+++ b/acara.html
@@ -9,7 +9,7 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v2.0">
+    <link rel="stylesheet" href="assets/css/style.css?v2.1">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
@@ -57,17 +57,29 @@
                             <hr>
                             <table class="acara-detail" style="width: 100%;">
                                 <tr>
-                                    <td>Tempat</td>
+                                    <td>
+                                        <span class="material-icons">
+                                            apartment
+                                        </span>
+                                    </td>
                                     <td>:</td>
-                                    <td>Jln. Aria Cikondang Gg.Harapan 1 No. 34A</td>
+                                    <td>Mesjid Al Falah Gg Jembar 3, Jln. Aria Cikondang Gg.Harapan 1 No. 34A</td>
                                 </tr>
                                 <tr>
-                                    <td>Hari/tgl</td>
+                                    <td>
+                                        <span class="material-icons">
+                                            event
+                                        </span>
+                                    </td>
                                     <td>:</td>
                                     <td>Jumat / 12 Maret 2021</td>
                                 </tr>
                                 <tr>
-                                    <td>Waktu</td>
+                                    <td>
+                                        <span class="material-icons">
+                                            schedule
+                                        </span>
+                                    </td>
                                     <td>:</td>
                                     <td>13.30-selesai</td>
                                 </tr>
@@ -82,19 +94,31 @@
                             <hr>
                             <table class="acara-detail" style="width: 100%;">
                                 <tr>
-                                    <td style="width: 12%;">Tempat</td>
+                                    <td>
+                                        <span class="material-icons">
+                                            apartment
+                                        </span>
+                                    </td>
                                     <td>:</td>
-                                    <td>Green Hill Resort Jl. Raya Ciherang Kp. Panyawouyan, Ciherang, Kec. Pacet, Kabupaten Cianjur, Jawa Barat 43253</td>
+                                    <td>Green Hill Resort, Jl. Raya Ciherang Kp. Panyawouyan, Ciherang, Kec. Pacet, Kabupaten Cianjur, Jawa Barat</td>
                                 </tr>
                                 <tr>
-                                    <td>Hari/tgl</td>
+                                    <td>
+                                        <span class="material-icons">
+                                            event
+                                        </span>
+                                    </td>
                                     <td>:</td>
                                     <td>Sabtu / 13 Maret 2021</td>
                                 </tr>
                                 <tr>
-                                    <td>Waktu</td>
+                                    <td>
+                                        <span class="material-icons">
+                                            schedule
+                                        </span>
+                                    </td>
                                     <td>:</td>
-                                    <td>09.00-Selesai</td>
+                                    <td>09.00-14.00</td>
                                 </tr>
                             </table>
                             <hr>
