--- a/tempat.html
+++ b/tempat.html
@@ -9,11 +9,11 @@
     <title>Wedding Carina Laila Shifa & Andy Arismianto</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?v2.3">
+    <link rel="stylesheet" href="assets/css/style.css?v2.8">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <audio id="backsound" autoplay loop>
-        <source src="assets/audio/TULUS-Adaptasi.mp3" type="audio/mp3">
+        <source src="assets/audio/tulus-teman-hidup.mp3" type="audio/mp3">
     </audio>
     </head>
 
@@ -59,6 +59,57 @@
                 </div>
                 <hr>
                 <div id="map"></div>
+            </div>
+        </div>
+
+        <button class="modal-safety" data-toggle="modal" data-target="#safety">
+            <div class="safety-card">
+                <span class="material-icons">
+                    health_and_safety
+                </span>
+            </div>
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="safety" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">To our dearest guest</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-fluid">
+                            <div class="text-center text-color">
+                                use health protocol such as
+                                <div class="row text-color">
+                                    <div class="col-6 col-md-3 mt-3">
+                                        <img src="assets/img/safety/protection-mask.png" alt="" class="img-fluid" >
+                                        Wear Mask
+                                    </div>
+                                    <div class="col-6 col-md-3 mt-3">
+                                        <img src="assets/img/safety/soap.png" alt="" class="img-fluid" >
+                                        Wash Your Hand
+                                    </div>
+                                    <div class="col-6 col-md-3 mt-3">
+                                        <img src="assets/img/safety/disinfectant.png" alt="" class="img-fluid" >
+                                        Bring Antiseptic
+                                    </div>
+                                    <div class="col-6 col-md-3 mt-3">
+                                        <img src="assets/img/safety/social.png" alt="" class="img-fluid" >
+                                        social Distancing
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -216,12 +267,12 @@
             <div class='flake'></div>
         </div>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="assets/js/bootstrap.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxsJkeeQQxJJfDpijeQLhtnVLhvQGNcsI&callback=initMap&libraries=&v=weekly" async></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLAlutMmMOtJSleao4w2FxX_Dq1ROq1As&callback=initMap&libraries=&v=weekly" async></script>
         <script type="text/javascript">
             var myAudio = document.getElementById("backsound");
             var isPlaying = false;
